interpreter/tests/golden-files/math.enzo
5
error: undefined: $x
    $x + $y;            // prints 105
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
14
14
20
20
15
1234567890
1234567890
-5
-5
-10
0
0
Syntax error: Unexpected token '-' at line 1, column 9.
Expected one of: LPAR, LBRACE, LSQB, NAME, SIGNED_NUMBER, STRING, SEMICOLON
    $weird: --5;        // error: double minus not allowed
            ^
